--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,57 @@
 <html>
   <head>
     <title>Jovian careers</title>
+    <style>
+      h1{
+        font-family: Roboto;
+        font-size: 40px;
+        font-weight: normal;
+        color: rgb(50,50,50);
+        text-align: center;
+      }
+      #banner
+      {
+        width: 100%;
+        height: 240px;
+        object-fit: cover;
+      }
+      h2
+      {
+        font-family: Roboto;
+        font-size: 30px;
+        font-weight: normal;
+        color: rgb(100,100,100);
+        text-align: center;
+      }
+      .bodyText
+      {
+        font-family: Roboto;
+        color: rgb(80, 80, 80);
+      }
+      #container{
+        max-width: 720px;
+        margin: 0 auto 0 auto;
+      }
+    </style>
   </head>
   <body>
-    <h1>Jovian careers</h1>
-    <img src="https://f3d79a38-f761-4a4b-a746-289f118b8256-00-1l2dty292esxw.spock.replit.dev/static/banner.jpg" height="320" >
-    <h2>About</h2>
-    <p>Forget browsing endless job boards. Here, you'll find a curated space tailor-made for your aspirations. Whether you're a seasoned professional seeking new horizons or a fresh graduate exploring possibilities, our "About You" section empowers you to define your ideal work adventure. Tell us your skills, your passions, your goals – and watch as relevant opportunities, inspiring company stories, and career-boosting resources seamlessly align with your path. Dive into insights from industry experts, connect with like-minded peers, and unlock exclusive events. This isn't just a job search; it's a roadmap to a career crafted by you, for you. Take the first step, explore your "About You" zone, and watch your dream job manifest.</p>
-    <h2>Open Positions</h2>
-    <p>TODO: show the jobs here</p>
-    <button>Contact Us</button>
+    <div id="container">
+      <h1>Jovian careers</h1>
+      <img id="banner" src="https://f3d79a38-f761-4a4b-a746-289f118b8256-00-1l2dty292esxw.spock.replit.dev/static/banner.jpg" >
+      <h2>About</h2>
+      <p class="bodyText">
+        Forget browsing endless job boards. Here, you'll find a curated space tailor-made for your aspirations. Whether you're a seasoned professional seeking new horizons or a fresh graduate exploring possibilities, our "About You" section empowers you to define your ideal work adventure. Tell us your skills, your passions, your goals – and watch as relevant opportunities, inspiring company stories, and career-boosting resources seamlessly align with your path. Dive into insights from industry experts, connect with like-minded peers, and unlock exclusive events. This isn't just a job search; it's a roadmap to a career crafted by you, for you. Take the first step, explore your "About You" zone, and watch your dream job manifest.
+      </p>
+      <h2>Open Positions</h2>
+      <p class="bodyText">
+        TODO: show the jobs here
+      </p>
+      <div style="text-align: center;">
+        <button>Contact Us</button>
+        <p>
+          Copyright 2024, Jovian
+        </p>
+      </div>
+    </div>
   </body>
 </html>
