--- a/templates/home.html
+++ b/templates/home.html
@@ -2,54 +2,38 @@
 <html>
   <head>
     <title>Jovian careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-      h1{
-        font-family: Roboto;
-        font-size: 40px;
-        font-weight: normal;
-        color: rgb(50,50,50);
-        text-align: center;
-      }
-      #banner
-      {
-        width: 100%;
-        height: 240px;
+      #banner{
+        height: 300px;
         object-fit: cover;
-      }
-      h2
-      {
-        font-family: Roboto;
-        font-size: 30px;
-        font-weight: normal;
-        color: rgb(100,100,100);
-        text-align: center;
-      }
-      .bodyText
-      {
-        font-family: Roboto;
-        color: rgb(80, 80, 80);
-      }
-      #container{
-        max-width: 720px;
-        margin: 0 auto 0 auto;
+        width: 100%;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Jovian careers</h1>
-      <img id="banner" src="https://f3d79a38-f761-4a4b-a746-289f118b8256-00-1l2dty292esxw.spock.replit.dev/static/banner.jpg" >
-      <h2>About</h2>
-      <p class="bodyText">
+    <div class="container" >
+      <h1 class="text-center mt-2 mb-2">
+        {{company_name}} careers
+      </h1>
+      <img class="img-fluid" id="banner" src="https://f3d79a38-f761-4a4b-a746-289f118b8256-00-1l2dty292esxw.spock.replit.dev/static/banner.jpg" >
+      <h2 class="text-center mt-2 mb-2">About</h2>
+      <p class="lead">
         Forget browsing endless job boards. Here, you'll find a curated space tailor-made for your aspirations. Whether you're a seasoned professional seeking new horizons or a fresh graduate exploring possibilities, our "About You" section empowers you to define your ideal work adventure. Tell us your skills, your passions, your goals – and watch as relevant opportunities, inspiring company stories, and career-boosting resources seamlessly align with your path. Dive into insights from industry experts, connect with like-minded peers, and unlock exclusive events. This isn't just a job search; it's a roadmap to a career crafted by you, for you. Take the first step, explore your "About You" zone, and watch your dream job manifest.
       </p>
-      <h2>Open Positions</h2>
-      <p class="bodyText">
-        TODO: show the jobs here
-      </p>
-      <div style="text-align: center;">
-        <button>Contact Us</button>
-        <p>
+      <h2 class="text-center mt-2 mb-2">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include "jobitem.html" %}
+        {% endfor %}
+      </div>
+      <div class="text-center mt-2">
+        <button class="btn btn-primary btn-lg">
+          Contact Us
+        </button>
+        <p class="mt-2">
           Copyright 2024, Jovian
         </p>
       </div>
