--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
       <h1 class="text-center mt-2 mb-2">
         {{company_name}} careers
       </h1>
-      <img class="img-fluid" id="banner" src="https://f3d79a38-f761-4a4b-a746-289f118b8256-00-1l2dty292esxw.spock.replit.dev/static/banner.jpg" >
+      <img class="img-fluid" id="banner" src="https://raw.githubusercontent.com/rahulrawatgujjar/careers-website/main/static/banner.jpg" >
       <h2 class="text-center mt-2 mb-2">About</h2>
       <p class="lead">
         Forget browsing endless job boards. Here, you'll find a curated space tailor-made for your aspirations. Whether you're a seasoned professional seeking new horizons or a fresh graduate exploring possibilities, our "About You" section empowers you to define your ideal work adventure. Tell us your skills, your passions, your goals – and watch as relevant opportunities, inspiring company stories, and career-boosting resources seamlessly align with your path. Dive into insights from industry experts, connect with like-minded peers, and unlock exclusive events. This isn't just a job search; it's a roadmap to a career crafted by you, for you. Take the first step, explore your "About You" zone, and watch your dream job manifest.
