--- a/templates/home.html
+++ b/templates/home.html
@@ -10,33 +10,39 @@
         height: 300px;
         object-fit: cover;
         width: 100%;
+        margin-bottom: 16px;
       }
     </style>
   </head>
   <body>
-    <div class="container" >
+    {% include "nav.html" %}
+    <img class="img-fluid" id="banner" src="/static/banner.jpg" >
+    <div class="container">
       <h1 class="text-center mt-2 mb-2">
         {{company_name}} careers
       </h1>
-      <img class="img-fluid" id="banner" src="https://raw.githubusercontent.com/rahulrawatgujjar/careers-website/main/static/banner.jpg" >
-      <h2 class="text-center mt-2 mb-2">About</h2>
-      <p class="lead">
-        Forget browsing endless job boards. Here, you'll find a curated space tailor-made for your aspirations. Whether you're a seasoned professional seeking new horizons or a fresh graduate exploring possibilities, our "About You" section empowers you to define your ideal work adventure. Tell us your skills, your passions, your goals – and watch as relevant opportunities, inspiring company stories, and career-boosting resources seamlessly align with your path. Dive into insights from industry experts, connect with like-minded peers, and unlock exclusive events. This isn't just a job search; it's a roadmap to a career crafted by you, for you. Take the first step, explore your "About You" zone, and watch your dream job manifest.
-      </p>
+      <div class="row">
+        <div class="col-md-6">
+          <p class="lead">
+            Forget browsing endless job boards. Here, you'll find a curated space tailor-made for your aspirations. Whether you're a seasoned professional seeking new horizons or a fresh graduate exploring possibilities, our "About You" section empowers you to define your ideal work adventure. Tell us your skills, your passions, your goals – and watch as relevant opportunities, inspiring company stories, and career-boosting resources seamlessly align with your path. Dive into insights from industry experts, connect with like-minded peers, and unlock exclusive events. This isn't just a job search; it's a roadmap to a career crafted by you, for you. Take the first step, explore your "About You" zone, and watch your dream job manifest.
+          </p>
+        </div>
+        <div class="d-none d-md-block col-md-6">
+          <img src="/static/people.jpg" style="height: 320px; border-radius: 4px" >
+        </div>
+      </div>
       <h2 class="text-center mt-2 mb-2">Open Positions</h2>
-      <div>
+      <div class=>
         {% for job in jobs %}
           {% include "jobitem.html" %}
         {% endfor %}
       </div>
       <div class="text-center mt-2">
-        <button class="btn btn-primary btn-lg">
+        <a class="btn btn-primary btn-lg" href="mailto:rahulrawatgujjar00@gmail.com?subject=Question%20about%20job%20opening&body=My%20name%3A%20%3CEnter%20your%20name%20here%3E%0D%0AMy%20question%3A%20%3CEnter%20your%20question%20here%3E">
           Contact Us
-        </button>
-        <p class="mt-2">
-          Copyright 2024, Jovian
-        </p>
+        </a>
       </div>
     </div>
+    {% include "footer.html" %}
   </body>
 </html>
