--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -15,6 +15,6 @@
     {% endif %}
   </div>
   <div class="col-2">
-    <button type="button" class="btn btn-outline-primary">Apply</button>
+    <a href="mailto:rahulrawatgujjar00@gmail.com?subject=Application%20for%20{{job['title']}}&body=My%20name%3A%20%3CYour%20Name%3E%0D%0AMy%20resume%3A%20%3CYour%20resume%20link%3E%0D%0AMy%20linkedin%3A%20%3CYour%20linkedin%20id%20link%3E" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
