--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jovian careers</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-      #banner{
-        height: 300px;
-        object-fit: cover;
-        width: 100%;
-        margin-bottom: 16px;
-      }
-    </style>
+    <title>Ignite Career</title>
+    {% include "bootstrap.html" %}
   </head>
   <body>
     {% include "nav.html" %}
-    <img class="img-fluid" id="banner" src="/static/banner.jpg" >
+    {% include "banner.html" %}
     <div class="container">
       <h1 class="text-center mt-2 mb-2">
-        {{company_name}} careers
+        Ignite Career
       </h1>
       <div class="row">
         <div class="col-md-6">
