--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -11,7 +11,7 @@
       <h1 class="text-center mt-2 mb-2">
         Ignite career
       </h1>
-      <h3 cla>{{job.title}}</h3>
+      <h3>{{job.title}}</h3>
       <p class="lead" >{{job.location}}</p>
       <h4>Responsibilities</h3>
       <ul>
@@ -27,6 +27,7 @@
       </ol>
       <h4>Salary</h3>
       <p>{{job.currency}}{{job.salary}}</p>
+      {% include "application_form.html" %}
     </div>
     {% include "footer.html" %}
   </body>
