corrected the alignment of apply button

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -1,5 +1,5 @@
 <div class="border-bottom row" style="margin-bottom: 16px; padding-bottom: 8px;">
-  <div class="col-10">
+  <div class="col-9">
     <div>
       <h4 style="color: rgb(120,120,120); margin-bottom: 4px;">
         {{job["title"]}}
@@ -14,7 +14,7 @@
     </div>
     {% endif %}
   </div>
-  <div class="col-2">
+  <div class="col-3" style="display:flex; justify-content:flex-end; align-items:flex-start">
     <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
