--- a/templates/home.html
+++ b/templates/home.html
@@ -21,11 +21,11 @@
           <img src="/static/people.jpg" style="height: 320px; border-radius: 4px" >
         </div>
       </div>
-      <h2 class="text-center mt-2 mb-2">Open Positions</h2>
-      <div class=>
-        {% for job in jobs %}
-          {% include "jobitem.html" %}
-        {% endfor %}
+      <div style>
+        <h2 class="text-center mt-2 mb-2">Open Positions</h2>
+          {% for job in jobs %}
+            {% include "jobitem.html" %}
+          {% endfor %}
       </div>
       <div class="text-center mt-2">
         <a class="btn btn-primary btn-lg" href="mailto:rahulrawatgujjar00@gmail.com?subject=Question%20about%20job%20opening&body=My%20name%3A%20%3CEnter%20your%20name%20here%3E%0D%0AMy%20question%3A%20%3CEnter%20your%20question%20here%3E">
