added authentication system to the website

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,6 +7,6 @@
       <li class="nav-item"><a target="_blank" href="https://careers-website-xxa6.onrender.com/" class="nav-link px-2 text-body-secondary">FAQs</a></li>
       <li class="nav-item"><a target="_blank" href="https://careers-website-xxa6.onrender.com/" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2024 Company, Inc</p>
+    <p class="text-center text-body-secondary">Made by Rahul Rawat</p>
   </footer>
 </div>
