--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -15,6 +15,6 @@
     {% endif %}
   </div>
   <div class="col-3" style="display:flex; justify-content:flex-end; align-items:flex-start">
-    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
+    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary apply-btn">Apply</a>
   </div>
 </div>
