--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,6 +4,10 @@
       <img src="/static/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
       Ignite
     </a>
+    <div class="log-in-out">
+      <a href="/login" id="login">Login</a>
+      <a href="/logout" id="logout">Logout</a>
+    </div>
   </div>
 </nav>
 <div style="height: 56px;">
