--- a/templates/application_submitted.html
+++ b/templates/application_submitted.html
@@ -3,6 +3,7 @@
   <head>
     <title>Application Submitted</title>
     {% include "bootstrap.html" %}
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     {% include "nav.html" %}
@@ -40,5 +41,7 @@
       </div>
     </div>
     {% include "footer.html" %}
+    <script type="module" src="/static/js/script.js"></script>
+    <script type="module" src="/static/js/utility.js"></script>
   </body>
 </html>
