--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
   <head>
     <title>Ignite Career</title>
     {% include "bootstrap.html" %}
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     {% include "nav.html" %}
@@ -21,11 +22,19 @@
           <img src="/static/people.jpg" style="height: 320px; border-radius: 4px" >
         </div>
       </div>
-      <div style>
+      <div class="mt-2 mb-6">
         <h2 class="text-center mt-2 mb-2">Open Positions</h2>
           {% for job in jobs %}
             {% include "jobitem.html" %}
           {% endfor %}
+      </div>
+      <div class="applied-jobs mt-2 mb-4">
+        {% if is_authenticated: %}
+        <h2 class="text-center mt-2 mb-2">Applied Positions</h2>
+          {% for job in applied_jobs %}
+            {% include "jobitem.html" %}
+          {% endfor %}
+        {% endif %}
       </div>
       <div class="text-center mt-2">
         <a class="btn btn-primary btn-lg" href="mailto:rahulrawatgujjar00@gmail.com?subject=Question%20about%20job%20opening&body=My%20name%3A%20%3CEnter%20your%20name%20here%3E%0D%0AMy%20question%3A%20%3CEnter%20your%20question%20here%3E">
@@ -34,5 +43,8 @@
       </div>
     </div>
     {% include "footer.html" %}
+    <script type="module" src="/static/js/script.js"></script>
+    <script type="module" src="/static/js/home.js"></script>
+    <script type="module" src="/static/js/utility.js"></script>
   </body>
 </html>
