--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -3,6 +3,7 @@
   <head>
     <title>{{job.title}}</title>
     {% include "bootstrap.html" %}
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     {% include "nav.html" %}
@@ -30,5 +31,7 @@
       {% include "application_form.html" %}
     </div>
     {% include "footer.html" %}
+    <script type="module" src="/static/js/script.js"></script>
+    <script type="module" src="/static/js/utility.js"></script>
   </body>
 </html>
